Concurrent refinement activation threshold not updated for card counts

XMLWordPrintable

    • gc
    • b07

      JDK-8230109 changed G1 concurrent refinement to track the number of enqueued cards rather than the number of buffers, and to compute the activation and deactivation thresholds for the threads in units of cards rather than buffers. However, the activation threshold for the primary refinement thread is handled specially, potentially being activated more aggressively than the normal calculation would suggest. That special case was not updated for the change from units of buffers to units of cards. As a result, the primary thread will likely be activated much more aggressively than intended.

            Assignee:
            Kim Barrett
            Reporter:
            Kim Barrett
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: