8237261: Concurrent refinement activation threshold not updated for card counts

Fix special-case threshold calculation for primary refinement thread

Reviewed-by: tschatzl, sjohanss